--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>JOB</title>
+    <title>MY BLOG</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -54,7 +54,7 @@
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="#">Linkedin </a>
                 <a class="nav-item nav-link" href="#">Resume</a>
-                <a class="nav-item nav-link" href="#">Blog</a>
+                <a class="nav-item nav-link active" href="#">Blog</a>
 
             </div>
         </div>
@@ -65,7 +65,7 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1>Hi,I'm Sifat</h1>
+            <h1>Welcome to Sifat's Blog</h1>
             <p class="lead text-muted">Code Freak with Zero Achievement</p>
             <p>
                 <a href="mailto:sifatibna.amin9@gmail.com" class="btn btn-primary my-2">Contact me</a>
@@ -75,14 +75,17 @@
 
     <div class="album py-5 bg-light">
         <div class="container">
-
+            <h2>Latest Blogs</h2>
+            <br>
             <div class="row">
-                {% for job in Jobs.all %}
+                {% for blog in blogs.all %}
                     <div class="col-md-4">
+                        <a href="#" ><h3> {{ blog.title }}</h3></a>
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="{{ job.image.url }}"/>
+                            <img class="card-img-top" src="{{ blog.image.url }}" class="img-fluid "/>
                             <div class="card-body">
-                                <p class="card-text">{{ job.summary }}</p>
+                                <p class="card-text">{{ blog.summary }}</p>
+                                <p>{{ blog.pub_date }}</p>
 
                             </div>
                         </div>
