--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -46,7 +47,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Sifat Ibna Amin</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Sifat Ibna Amin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,7 +81,7 @@
             <div class="row">
                 {% for blog in blogs.all %}
                     <div class="col-md-4">
-                        <a href="#" ><h3> {{ blog.title }}</h3></a>
+                        <a href="{% url 'detail' blog.id %}" ><h3> {{ blog.title }}</h3></a>
                         <div class="card mb-4 shadow-sm">
                             <img class="card-img-top" src="{{ blog.image.url }}" class="img-fluid "/>
                             <div class="card-body">
