Fixed some issues

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -58,8 +58,8 @@
 
             <div>
                     <img src="{{ blog.image.url }}" class="img-fluid"/>
-
-                        <p>{{ blog.summary }}</p>
+                        <br>
+                        <p>{{ blog.body }}</p>
                         <p>{{ blog.pub_date }}</p>
 
 
